# F5-TTS-NPU

./: pyproject.toml
src/f5_tts/: api.py
src/f5_tts/infer/: utils_infer.py
src/f5_tts/model/: modules.py  utils.py
